--- a/client/styles/Game.module.css
+++ b/client/styles/Game.module.css
@@ -57,26 +57,23 @@
   border-bottom: 1px solid rgba(209, 213, 219, 0.7);
 }
 
-.button-overlay {
-  border: 3px solid;
-  border-color: rgba(255, 255, 255, 0.5);
-  transition: background-color 0.3s ease-out;
-  transition: border-color 0.3s ease-out;
-  box-sizing: content-box;
-  top: -3px;
-  left: -3px;
+.button-container {
+  padding: 3px;
 }
 
-.button-corners-container:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  border-color: hsla(55, 80%, 70%, 0.85);
+.button-overlay {
+  outline: 3px solid;
+  outline-color: rgba(255, 255, 255, 0.5);
+  transition: background-color 0.3s ease-out;
+  transition: outline-color 0.3s ease-out;
+  width: 100%;
+  height: 100%;
 }
 
 .button-corners-container {
   width: calc(100% + 6px);
   height: calc(100% + 6px);
-  top: -3px;
-  left: -3px;
+  transition: 0.3s ease-out;
 }
 
 .button-corners {
@@ -85,3 +82,17 @@
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+.button-overlay:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  outline-color: hsla(55, 80%, 70%, 0.85);
+}
+
+.button-overlay:hover > .button-corners-container {
+  width: calc(100% - 12px);
+  height: calc(100% - 12px);
+}
+
+.button-overlay:hover .button-corners {
+  background-color: hsla(55, 80%, 70%, 0.85);
+
+}
