--- a/client/styles/Game.module.css
+++ b/client/styles/Game.module.css
@@ -1,5 +1,8 @@
+.v-anton {
+  font-family: 'Anton', sans-serif;
+}
+
 .map-frame {
-  border-top: 1px solid rgb(209 213 219);
   border-bottom: 1px solid rgba(209, 213, 219, 0.7);
 }
 
@@ -30,6 +33,29 @@
 
 .inset-shadows {
   box-shadow: inset 0px 0px 15px rgba(0,0,0,0.4);
+}
+
+.attack-glow {
+  overflow: hidden;
+}
+
+.attack-glow::before {
+  content: '';
+  overflow: visible;
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  box-shadow: 0px 0px 150px 80px var(--vred);
+}
+
+.attack-glow::after {
+  content: '';
+  overflow: visible;
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  bottom: 0;
+  box-shadow: 0px 0px 150px 80px var(--vgreen);
 }
 
 .small-map-frame {
@@ -101,7 +127,7 @@
     transform: translateX(0);
   }
   to {
-    transform: translateX(-50%);
+    transform: translateX(-33.3333%);
   }
 }
 
@@ -111,7 +137,7 @@
 
 @keyframes wrap-right {
   from {
-    transform: translateX(-50%);
+    transform: translateX(-33.33333%);
   }
   to {
     transform: translateX(0);
@@ -123,8 +149,7 @@
 }
 
 .bg-text {
-  transform: scaleY(1.2);
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: rgba(209, 213, 219, 0.1);
-  color: rgba(209, 213, 219, 0);
+  color: rgba(209, 213, 219, 0.05);
 }
